<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_notifications">
        <ListPreference
            android:key="pref_notification_mode"
            android:title="@string/pref_title_notifications"
            android:dialogTitle="@string/pref_dialog_notifications"
            android:summary="@string/pref_summary_notifications"
            android:entries="@array/notification_types_array"
            android:entryValues="@array/notification_types_values"
            android:defaultValue="both" />

        <rhedox.gesahuvertretungsplan.ui.preference.TimePreference
            android:key="pref_notification_time_long"
            android:title="@string/pref_title_notification_time"
            android:summary="@string/pref_summary_notification_time"
            android:defaultValue="25200000" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_apparence">

        <ListPreference
            android:key="pref_dark_type"
            android:title="@string/pref_title_dark_mode"
            android:dialogTitle="@string/pref_dialog_dark_mode"
            android:summary="@string/pref_summary_dark_mode"
            android:entries="@array/dark_theme_array"
            android:entryValues="@array/dark_theme_values"
            android:defaultValue="default" />

        <CheckBoxPreference
            android:key="pref_amoled"
            android:title="@string/pref_title_amoled"
            android:summary="@string/pref_summary_amoled"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_widget_dark"
            android:title="@string/pref_title_widget_dark_mode"
            android:summary="@string/pref_summary_widget_dark_mode"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_privacy">

        <SwitchPreference
            android:key="pref_analytics"
            android:title="@string/pref_title_analytics"
            android:summary="@string/pref_summary_analytics" />

        <SwitchPreference
            android:key="pref_crash_reports"
            android:title="@string/pref_title_crash_reports"
            android:summary="@string/pref_summary_crash_reports" />

    </PreferenceCategory>

</PreferenceScreen>
