<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/mainGroup" android:checkableBehavior="single" android:checkable="true">
        <item
            android:id="@+id/substitutes"
            android:icon="@drawable/ic_substitutes"
            android:checked="false"
            android:title="@string/drawer_substitutes" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:checked="false"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:checked="false"
            android:title="@string/action_about" />
    </group>

    <group android:id="@+id/boardsSubheader" android:title="@string/drawer_boards" android:checkableBehavior="single" android:checkable="true">

    </group>
</menu>