<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<rhedox.gesahuvertretungsplan.ui.widget.SwipeRefreshLayoutFix
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:maxWidth="400dp"
		android:id="@+id/swipe">

		<android.support.v7.widget.RecyclerView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/recylcler"
			android:scrollbars="vertical"
			android:paddingTop="@dimen/listMargin"
			android:paddingBottom="@dimen/listMargin"
			android:clipToPadding="false"/>

	</rhedox.gesahuvertretungsplan.ui.widget.SwipeRefreshLayoutFix>

	<tr.xip.errorview.ErrorView xmlns:errorview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/error_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		errorview:ev_title="@string/error_title"
		errorview:ev_titleColor="?attr/textPrimary"
		errorview:ev_subtitle="@string/error"
		errorview:ev_subtitleColor="?attr/textSecondary"
		errorview:ev_errorImage="@drawable/error_view_cloud"
		errorview:ev_showTitle="true"
		errorview:ev_showSubtitle="true"
		errorview:ev_showRetryButton="true"
		errorview:ev_retryButtonText="@string/retry"
		errorview:ev_retryButtonTextColor="?attr/colorAccent"
        android:visibility="gone" />

</FrameLayout>
