<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/intro_slide_4"
              android:paddingBottom="@dimen/appIntroBottomBarHeight">


    <TextView
        android:id="@+id/title"
        android:text="@string/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="256dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/login_username_hint"
                android:nextFocusDown="@+id/password"
                android:nextFocusRight="@+id/password"
                android:nextFocusForward="@+id/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/login_password_hint"
                android:nextFocusDown="@+id/login"
                android:nextFocusRight="@+id/login"
                android:nextFocusForward="@+id/login"
                android:nextFocusUp="@id/username"
                android:nextFocusLeft="@id/username" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:imeOptions="actionSend"
            android:nextFocusUp="@id/password"
            android:nextFocusLeft="@id/password" />

    </LinearLayout>
</LinearLayout>