<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logogesahu"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/login_explaination"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/usernameLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameEdit"
                android:hint="@string/login_username_hint"
                android:nextFocusDown="@+id/passwordEdit"
                android:nextFocusRight="@+id/passwordEdit"
                android:nextFocusForward="@+id/passwordEdit"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordEdit"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:nextFocusDown="@+id/login"
                android:nextFocusRight="@+id/login"
                android:nextFocusForward="@+id/login"
                android:nextFocusUp="@id/usernameEdit"
                android:nextFocusLeft="@id/usernameEdit" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="bottom|end|right"/>

</LinearLayout>