<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/intro_slide_4"
              android:paddingBottom="@dimen/appIntroBottomBarHeight">


    <TextView
        android:id="@+id/title"
        android:text="@string/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/school_year_spinner_label"
                android:text="@string/school_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="48dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:dropDownWidth="88dp"
                android:dropDownVerticalOffset="-128dp"
                android:contentDescription="@string/school_year"
                android:id="@+id/school_year_spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/school_class_spinner_label"
                android:text="@string/school_class"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="48dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:dropDownWidth="88dp"
                android:dropDownVerticalOffset="-128dp"
                android:contentDescription="@string/school_class"
                android:id="@+id/school_class_spinner" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>