<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:elevation="4dp"
              android:layout_marginBottom="8dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/topCardHeight"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:layout_marginBottom="8dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-32dp"
        android:padding="16dp"
        app:cardElevation="6dp"
        android:id="@+id/lessons_card"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <rhedox.gesahuvertretungsplan.ui.widget.NumberCircle
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:id="@+id/lessons_total"
                app:outlineThickness="2dp"
                app:ovalText="@string/lessons_total"
                app:ovalColor="@color/mark_good"
                app:outlineColor="@color/mark_good"
                app:ovalTextColor="@android:color/white"
                app:outlineTextColor="?android:attr/textColorPrimary"
                />

            <rhedox.gesahuvertretungsplan.ui.widget.NumberCircle
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:id="@+id/lessons_missed_with_sick_note"
                app:outlineThickness="2dp"
                app:ovalColor="@color/mark_average"
                app:outlineColor="@color/mark_average"
                app:ovalText="@string/lessons_missed_with_sick_note"
                app:ovalTextColor="@android:color/white"
                app:outlineTextColor="?android:attr/textColorPrimary"
                />

            <rhedox.gesahuvertretungsplan.ui.widget.NumberCircle
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:id="@+id/lessons_missed"
                app:outlineThickness="2dp"
                app:ovalColor="@color/mark_bad"
                app:outlineColor="@color/mark_bad"
                app:ovalText="@string/lessons_missed"
                app:ovalTextColor="@android:color/white"
                app:outlineTextColor="?android:attr/textColorPrimary"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>